# pico-console

./: LICENSE  README.md
doc/: diagram.drawio
pico_console/: CMakeLists.txt  pico_upload.sh
pico_console/driver/: CMakeLists.txt
pico_console/driver/LED_STATUS/: LED_STATUS.cpp
pico_console/driver/LI_BATTERY/: CMakeLists.txt  LI_BATTERY.cpp
pico_console/driver/MCP4725/: CMakeLists.txt  MCP4725.cpp  MCP4725.hpp  Sound_Freq.h  Sound_system.cpp
pico_console/driver/PCA9554/: CMakeLists.txt  PCA9554.cpp  PCA9554.hpp
pico_console/driver/PICO_W_WIFI/: CMakeLists.txt
pico_console/driver/SD_SPI/: SD_SPI.cpp  SD_SPI.hpp
pico_console/driver/TM022HDH26/: Adafruit_GFX_E.hpp
pico_console/driver/USB_SW/: USB_SW.cpp
pico_console/driver/ir_remote/: ir_remote.cpp  ir_remote.hpp
pico_console/driver/led_status/: led_status.cpp  led_status.hpp
pico_console/driver/li_battery/: li_battery.cpp  li_battery.hpp
pico_console/driver/mcp4725/: CMakeLists.txt  mcp4725.cpp  mcp4725.hpp
pico_console/driver/pca9554/: CMakeLists.txt  pca9554.cpp  pca9554.hpp
pico_console/driver/pico_w_bt/: CMakeLists.txt  pico_w_bt.cpp  pico_w_bt.hpp
pico_console/driver/pico_w_wifi/: pico_w_wifi.cpp  pico_w_wifi.hpp
pico_console/driver/sd_spi/: CMakeLists.txt  sd_spi.cpp  sd_spi.hpp
pico_console/driver/tm022hdh26/: Adafruit_GFX_E.cpp  Adafruit_GFX_E.hpp  CMakeLists.txt  tm022hdh26.cpp  tm022hdh26.hpp
pico_console/driver/usb_sw/: usb_sw.cpp  usb_sw.hpp
pico_console/include/: built_in_led.h  hw_test.hpp  raspberry_logo.h
pico_console/lib/: CMakeLists.txt
pico_console/lib/IR_REMOTE/: IR_REMOTE.cpp
pico_console/lib/LED_STATUS/: CMakeLists.txt  LED_STATUS.hpp
pico_console/lib/LI_BATTERY/: LI_BATTERY.cpp  LI_BATTERY.hpp
pico_console/lib/MCP4725/: CMakeLists.txt  MCP4725.hpp
pico_console/lib/PICO_W_BT/: PICO_W_BT.cpp  PICO_W_BT.hpp
pico_console/lib/PICO_W_WIFI/: PICO_W_WIFI.cpp  PICO_W_WIFI.hpp
pico_console/lib/SD_SPI/: CMakeLists.txt
pico_console/lib/TM022HDH26/: Adafruit_GFX_E.cpp  Adafruit_GFX_E.hpp  CMakeLists.txt  TM022HDH26.cpp  TM022HDH26.hpp  font_16.h
pico_console/lib/USB_SW/: USB_SW.hpp
pico_console/middleware/: CMakeLists.txt
pico_console/middleware/PICO_W_WIFI/: CMakeLists.txt
pico_console/middleware/sound_system/: CMakeLists.txt  sound_system.cpp  sound_system.hpp
pico_console/middlewear/: CMakeLists.txt
pico_console/src/: hw_test.cpp  main.cpp
